[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firebase_authentication"
version = "0.0.1"
authors = [
  { name="Yunus Kayalidere", email="yunus.kayalidere@gmail.com" },
]
description = "A helper Class for Firebase procedures."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/deduble/firebase_authentication"
"Bug Tracker" = "https://github.com/deduble/firebase_authentication/issues"